objects/Prospect__c.object
<CustomObject>
    <description>Combines data from Leads &amp; Opportunities</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  Lead__r.Company  ,  Opportunity__r.Account.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),    TEXT( Lead__r.AccountTypeNew__c ), TEXT( Opportunity__r.Account.AccTypeNew__c )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Rollup__c</fullName>
        <formula>IF(NOT(Financing_Amount__c == 0), Financing_Amount__c,  Project_Size__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Received_Date__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.App_Received_Date__c ,  Opportunity__r.Application_Submission_Date__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benchmark_Type__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), TEXT(Lead__r.Benchmark_Type__c) , TEXT(Opportunity__r.Benchmark_Type__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benchmark Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Value__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Property_Market_Value_Est_c__c , Opportunity__r.Property_Market_Value_Est__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Fee__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Channel_Partner_Fee__c , Opportunity__r.Channel_Partner_Fee__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Fee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  Lead__r.Channel_Partner_Name__r.Name ,  Opportunity__r.Channel_Partner_Entity__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  Lead__r.Close_Date__c, Opportunity__r.CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Month__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), DATE(YEAR(Lead__r.Close_Date__c),MONTH(Lead__r.Close_Date__c),1), DATE(YEAR(Opportunity__r.CloseDate),MONTH(Opportunity__r.CloseDate),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Construction_Status_Initial_Engagement__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), TEXT(Lead__r.Construction_Status_Initial_Engagement__c) , TEXT(Opportunity__r.Construction_Work_Status__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Construction Status-Initial Engagement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Prospect</relationshipLabel>
        <relationshipName>Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Dead_Lost__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Date_Dead_Lost__c , Opportunity__r.Date_Dead_Lost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Dead-Lost</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Declared_Dormant__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Date_Declared_Dormant__c , Opportunity__r.Date_Declared_Dormant__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Declared Dormant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dead_Lost_Reason__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), TEXT(Lead__r.Dead_Lost_Reason__c) , TEXT(Opportunity__r.Dead_Lost_Reason__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dead-Lost Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detail_of_Improvements__c</fullName>
        <label>Detail of Improvements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dormancy_Resolution_Date__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Dormancy_Resolution_Date__c , Opportunity__r.Dormancy_Resolution_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dormancy Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EOY_Tracking__c</fullName>
        <label>EOY Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commit</fullName>
                </value>
                <value>
                    <fullName>Stretch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Supplier__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Equipment_Supplier__r.Name , Opportunity__r.Equipment_Supplier__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Supplier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financing_Amount__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  Lead__r.Total_PACE_financing_amount_Est__c, Opportunity__r.Financing_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financing_Term__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Financing_Term__c , Opportunity__r.Loan_Term__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financing Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identified_Date__c</fullName>
        <formula>IF(NOT(ISBLANK(Lead__r.Identified_Date__c)), Lead__r.Identified_Date__c, IF(ISBLANK(Opportunity__r.Id), DATEVALUE(Lead__r.CreatedDate),Opportunity__r.Initial_Entry_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Improvement_Cost_Est__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Improvement_Cost_Est__c , Opportunity__r.Est_Improvement_Cost__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Improvement Cost (Est)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_App_Date__c</fullName>
        <formula>Opportunity__r.Initial_App_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_App_Month__c</fullName>
        <formula>DATE(YEAR(Initial_App_Date__c),MONTH(Initial_App_Date__c),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial App Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Executed_Date__c</fullName>
        <formula>Opportunity__r.LOI_Executed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOI Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Executed_Month__c</fullName>
        <formula>DATE(YEAR(LOI_Executed_Date__c),MONTH(LOI_Executed_Date__c),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOI Executed Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Sent_Date__c</fullName>
        <formula>Opportunity__r.LOI_Sent_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOI Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Sent_Month__c</fullName>
        <formula>DATE(YEAR(LOI_Sent_Date__c),MONTH(LOI_Sent_Date__c),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOI Sent Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Stage_Change__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  Lead__r.Last_Stage_Change_Date__c , Opportunity__r.Last_Stage_Change_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Stage Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <formula>Lead__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Prospect</relationshipLabel>
        <relationshipName>Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mortgage_Lender_1st__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Mortgage_Lender_1st__c , Opportunity__r.Mortgage_Lender__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mortgage Lender (1st)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Lender_2nd__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Mortgage_Lender_2nd__c , Opportunity__r.Second_Mortgage_Lender__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mortgage Lender (2nd)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Prospect</relationshipLabel>
        <relationshipName>Prospect</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Originations_Team_Member__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  Lead__r.Originations_Team_Member__r.FirstName &amp; &quot; &quot; &amp; Lead__r.Originations_Team_Member__r.LastName ,  Opportunity__r.OG_Team_Member__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.OG_Team_Member__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Originations Team Member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Dormancy_Trigger__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Out_of_Dormancy_Trigger__c , Opportunity__r.Out_of_Dormancy_Trigger__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out-of-Dormancy Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreQual_Date__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.PreQual_Date__c, Opportunity__r.Initial_Entry_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreQual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PreQual_Month__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), DATE(YEAR(Lead__r.PreQual_Date__c),MONTH(Lead__r.PreQual_Date__c),1) , DATE(YEAR(Opportunity__r.Pre_Qual_Start_Date__c),MONTH(Opportunity__r.Pre_Qual_Start_Date__c),1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreQual Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Adjustment_Notes__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Pricing_Adjustment_Notes__c , Opportunity__r.Pricing_Adjustment_Notes__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Adjustment Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Property_Type__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), TEXT(Lead__r.Primary_Type__c) , TEXT(Opportunity__r.Primary_Property_Type__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Property Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Objective__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  TEXT(Lead__r.Project_Objective__c)  , TEXT(Opportunity__r.Project_Objective__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Objective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Overview__c</fullName>
        <label>Project Overview</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Scope__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), TEXT(Lead__r.Project_Scope__c) , TEXT(Opportunity__r.Project_Type__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Size__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Improvement_Cost_Est__c, Opportunity__r.Est_Improvement_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date_Est__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Project_Start_Date__c , Opportunity__r.Desired_Project_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Date (Est.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_City__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  Lead__r.Property_City__c ,  Opportunity__r.Municipality__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City - Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  Lead__r.Property_County__c ,  Opportunity__r.County__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  TEXT(Lead__r.Property_State__c)   , TEXT(Opportunity__r.State_Prop__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State - Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street_Address__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Property_Street_Address__c, Opportunity__r.Physical_Address__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address - Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip_Code__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  Lead__r.Property_Zip__c ,  Opportunity__r.Zip_Code__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code - Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Name__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.FirstName &amp; &quot; &quot; &amp; Lead__r.LastName, Opportunity__r.Property_Owner_Main_Contact__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Property_Owner_Main_Contact__r.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Opp__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id) &amp;&amp; ISBLANK(Lead__r.Project_Name__c),  Lead__r.Company, 
IF(ISBLANK(Opportunity__r.Id) &amp;&amp; NOT(ISBLANK(Lead__r.Project_Name__c)), Lead__r.Project_Name__c,
IF(NOT(ISBLANK(Opportunity__r.Id)), Opportunity__r.Name, &quot;None&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Opp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Stage__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id) &amp;&amp; ISPICKVAL(Lead__r.Stage__c,&quot;Identified&quot;), &quot;0-Identified&quot;,
IF(ISBLANK(Opportunity__r.Id) &amp;&amp; ISPICKVAL(Lead__r.Stage__c,&quot;Pre-Qualified Lead&quot;), &quot;1-PreQualified&quot;,
IF(ISBLANK(Opportunity__r.Id) &amp;&amp; ISPICKVAL(Lead__r.Stage__c,&quot;Qualified Lead&quot;), &quot;2-Qualified&quot;,
IF(ISBLANK(Opportunity__r.Id) &amp;&amp; ISPICKVAL(Lead__r.Stage__c,&quot;Quoted&quot;), &quot;3-Quoted&quot;,
IF(ISBLANK(Opportunity__r.Id) &amp;&amp; ISPICKVAL(Lead__r.Stage__c,&quot;Dead/Lost&quot;), &quot;9-Dead/Lost&quot;,
IF(ISBLANK(Opportunity__r.Id) &amp;&amp; ISPICKVAL(Lead__r.Stage__c,&quot;Dormant&quot;), &quot;8-Dormant&quot;,

IF(ISPICKVAL(Opportunity__r.StageName,&quot;Dormant&quot;), &quot;8-Dormant&quot;,
IF(ISPICKVAL(Opportunity__r.StageName,&quot;Pre-Qualified Lead&quot;), &quot;1-PreQualified&quot;,
IF(ISPICKVAL(Opportunity__r.StageName,&quot;Qualified Lead&quot;), &quot;2-Qualified&quot;,
IF(ISPICKVAL(Opportunity__r.StageName,&quot;Initial App&quot;), &quot;4-InitialApp&quot;,
IF(ISPICKVAL(Opportunity__r.StageName,&quot;Processing&quot;), &quot;5-Processing&quot;,
IF(ISPICKVAL(Opportunity__r.StageName,&quot;Underwriting&quot;), &quot;6-Underwriting&quot;,
IF(ISPICKVAL(Opportunity__r.StageName,&quot;Closed&quot;), &quot;7-Closed&quot;,
IF(ISPICKVAL(Opportunity__r.StageName,&quot;Securitized&quot;), &quot;7-Securitized&quot;,
IF(ISPICKVAL(Opportunity__r.StageName,&quot;Dead/Lost&quot;), &quot;9-Dead/Lost&quot;,
IF(ISPICKVAL(Opportunity__r.StageName,&quot;Lost&quot;), &quot;9-Dead/Lost&quot;,
IF(ISPICKVAL(Opportunity__r.StageName,&quot;Dead&quot;), &quot;9-Dead/Lost&quot;, &quot;&quot;)))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qual_Date__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Qual_Date__c, Opportunity__r.Project_Qualified_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qual_Month__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), DATE(YEAR(Lead__r.Qual_Date__c),MONTH(Lead__r.Qual_Date__c),1) , DATE(YEAR( Opportunity__r.Project_Qualified_Date__c ),MONTH(Opportunity__r.Project_Qualified_Date__c),1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qual Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quoted_Date__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.Quoted_Date__c , Opportunity__r.Quoted_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quoted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  TEXT(Lead__r.CF_Lead_Source__c)  , TEXT( Opportunity__r.LeadSource ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Duration__c</fullName>
        <formula>TODAY() - Last_Stage_Change__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id),  Lead__r.Lead_Stage_text__c  ,  Opportunity__r.Stage_text__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Lead_Source__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id), Lead__r.CF_Sub_Lead_Source__c , Opportunity__r.Sub_Lead_Source__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Sheet_Sent_Date__c</fullName>
        <formula>Lead__r.Term_Sheet_Sent_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Sheet Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Sheet_Sent_Month__c</fullName>
        <formula>DATE(YEAR(Lead__r.Term_Sheet_Sent_Date__c), MONTH(Lead__r.Term_Sheet_Sent_Date__c), 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Sheet Sent Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <formula>IF(ISBLANK(Opportunity__r.Id) &amp;&amp; ISPICKVAL(Lead__r.Solar_Component__c,&quot;Yes&quot;), &quot;Solar&quot;,
IF(ISPICKVAL(Opportunity__r.Solar_Component__c,&quot;Yes&quot;), &quot;Solar&quot;,
IF(Includes(Opportunity__r.Type_of_Improvements_Multi__c ,&quot;Solar&quot;), &quot;Solar&quot;, &quot;CRE&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Use Case</label>
        <type>Text</type>
    </fields>
    <label>Prospect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Prospect-{00000}</displayFormat>
        <label>AutoID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospect</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>